--- a/style.css
+++ b/style.css
@@ -129,9 +129,11 @@
   flex-direction: column;
   margin: 50px 30px 50px 30px;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .top-main {
+  flex-wrap: wrap;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -173,6 +175,7 @@
 }
 
 .bottom-main{
+  flex-wrap: wrap;
   display: flex;
   justify-content: center;
   gap: 100px;
