--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 *{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 .login-page {
   background-color: aquamarine;
@@ -188,4 +191,94 @@
   border: 1.5px solid rgb(138, 185, 186);
   padding: 10px;
   border-radius: 5px;
+}
+.s-nav{
+  display:flex;
+  justify-content: space-between;
+  padding: 20px;
+  align-items: center;
+}
+
+.s-right-nav{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.s-right-nav button{
+  padding: 8px 15px;
+  background-color: rgb(173, 199, 199);
+  border: none;
+  border-radius: 20px;
+}
+
+.s-right-nav button a{
+  text-decoration: none;
+  color: black;
+}
+
+.s-header{
+  background-color: rgb(173, 199, 199);
+  padding: 50px;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 20px;
+}
+
+.s-left-header h1{
+  font-size: 50px;
+  padding-bottom: 20px;
+
+}
+
+.s-left-header h4{
+  width: 500px;
+}
+
+.s-right-header img{
+  width: 300px;
+  border-radius: 5px;
+   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.05)
+}
+
+
+.s-1 button {
+  padding: 8px 15px;
+  background-color: rgb(173, 199, 199);
+  border: none;
+  border-radius: 5px;
+}
+
+.s-1 button a{
+  text-decoration: none;
+  color: black;
+}
+
+.s-main1 {
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: space-around; 
+  padding: 20px;
+}
+
+.s-1 {
+  border: 1px solid #000;
+  padding: 20px;
+  flex: 0 0 300px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border-radius: 5px;
+  min-height: 250px; 
+}
+
+.s-1 button:hover{
+  background-color:rgb(197, 189, 177);
+}
+
+hr{
+  border: solid 1px;
 }
