--- a/style.css
+++ b/style.css
@@ -227,9 +227,11 @@
 }
 
 @media (max-width: 600px) {
-  .review-page {
-    padding: 30px;
-    font-size: 16px;
+  .review-box {
+    width: 100%;
+    padding: 20px;
+    border-radius: 0;
+
   }
 
   .review-page input {
@@ -312,6 +314,13 @@
   color: rgb(223, 189, 141);
 
 }
+@media (max-width: 768px) {
+    .signup-box {
+        width: 100px;
+        height: 100px;
+        padding: 12px;
+    }
+  }
 
 /* css i faqes home page */
 
@@ -909,4 +918,3 @@ hr {
 .details-btn:hover {
   background-color: rgb(150, 180, 180);
 }
-
